--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,20 @@
 .cell {
     border: solid;
     border-color: black;
-    height: 50px;
-    width: 50px;
-    display: inline-block;
-    margin-right: -4px;
-    margin-top: -6px;
+    border-width: 1px;
     box-sizing: border-box;
 }
 
 #grid {
     width: 800px;
+    height: 800px;
+    display: grid;
   }
+
+button {
+    margin: 4px 4px 20px;
+    background-color: rgb(73, 73, 255);
+    color: white;
+    font-weight: 600;
+    padding: 4px;
+}
