--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@
     background-color: #e0bbe4;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+}
+
 #header {
     display: flex;
     justify-content: center;
